staging/src/k8s.io/api/testdata/v1.23.0/networking.k8s.io.v1.Ingress.json
{
  "kind": "Ingress",
  "apiVersion": "networking.k8s.io/v1",
  "metadata": {
    "name": "2",
    "generateName": "3",
    "namespace": "4",
    "selfLink": "5",
    "uid": "7",
    "resourceVersion": "11042405498087606203",
    "generation": 8071137005907523419,
    "creationTimestamp": "2061-09-19T18:13:36Z",
    "deletionGracePeriodSeconds": -4955867275792137171,
    "labels": {
      "7": "8"
    },
    "annotations": {
      "9": "10"
    },
    "ownerReferences": [
      {
        "apiVersion": "11",
        "kind": "12",
        "name": "13",
        "uid": "Dz廔ȇ{sŊƏp",
        "controller": false,
        "blockOwnerDeletion": true
      }
    ],
    "finalizers": [
      "14"
    ],
    "managedFields": [
      {
        "manager": "16",
        "operation": "鐊唊飙Ş-U圴÷a/ɔ}摁(湗Ć]",
        "apiVersion": "17",
        "fieldsType": "18",
        "subresource": "19"
      }
    ]
  },
  "spec": {
    "ingressClassName": "20",
    "defaultBackend": {
      "service": {
        "name": "21",
        "port": {
          "name": "22",
          "number": 70007838
        }
      },
      "resource": {
        "apiGroup": "23",
        "kind": "24",
        "name": "25"
      }
    },
    "tls": [
      {
        "hosts": [
          "26"
        ],
        "secretName": "27"
      }
    ],
    "rules": [
      {
        "host": "28",
        "http": {
          "paths": [
            {
              "path": "29",
              "pathType": "晿\u003co,c鮽or",
              "backend": {
                "service": {
                  "name": "30",
                  "port": {
                    "name": "31",
                    "number": -1317363107
                  }
                },
                "resource": {
                  "apiGroup": "32",
                  "kind": "33",
                  "name": "34"
                }
              }
            }
          ]
        }
      }
    ]
  },
  "status": {
    "loadBalancer": {
      "ingress": [
        {
          "ip": "35",
          "hostname": "36",
          "ports": [
            {
              "port": -8441701,
              "protocol": "",
              "error": "37"
            }
          ]
        }
      ]
    }
  }
}
